--- a/IT4995/docker-compose.yml
+++ b/IT4995/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       dockerfile: ./Dockerfile
     command: |
       bash -c "python manage.py makemigrations && python manage.py migrate && \
-      python manage.py runserver  "
+      python manage.py runserver 0.0.0.0:8000 "
     volumes:
       - .:/app
     ports:
