--- a/IT4995/docker-compose.yml
+++ b/IT4995/docker-compose.yml
@@ -6,9 +6,9 @@ services:
     build:
       context: .
       dockerfile: ./Dockerfile
-#     command: |
-#       bash -c "python manage.py makemigrations && python manage.py migrate && \
-#       python manage.py runserver 0.0.0.0:8000 "
+    command: |
+      bash -c "python manage.py makemigrations && python manage.py migrate && \
+      python manage.py runserver 0.0.0.0:8000 "
     volumes:
       - .:/app
     ports:
